--- a/index.html
+++ b/index.html
@@ -1,12 +1,43 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-us">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Tosh Murchison">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name = "author" content="Tosh Murchison">
+  <title>Activity 1: Basic HTML Bio</title>
 </head>
+
 <body>
+  <header>
+    Tosh Murchison
+  </header>
+  <img src="http://lorempixel.com/400/200/business" alt="Random placeholder image">
+  <article>
+  <hr>
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ut lacinia ex. Etiam bibendum nec massa a sollicitudin. Aenean convallis dignissim ligula in efficitur. Phasellus ac quam quis ipsum porttitor blandit eget at nulla. Aliquam pharetra ornare nunc, id convallis massa egestas a. In volutpat finibus urna, et tristique tortor tincidunt ac. Donec mi lectus, consectetur non odio fringilla, sodales tristique lorem. Aliquam sed volutpat ex. Aliquam commodo luctus metus, vitae consectetur diam ullamcorper vel.<br><br>
     
+    Praesent elementum nec quam eu scelerisque. Suspendisse in sapien ultrices urna feugiat iaculis. Vivamus non libero ornare, placerat tortor non, viverra leo. Vestibulum varius porttitor suscipit. Aliquam eros quam, luctus ac ullamcorper eu, rhoncus porttitor tellus. Aliquam non turpis eu nisi molestie maximus. Mauris a enim porta, euismod velit et, sollicitudin lorem. Vestibulum sagittis risus eu varius ullamcorper. Maecenas blandit risus dolor, eget pretium ante ullamcorper nec. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Integer hendrerit purus libero, vel mattis leo malesuada at. Aenean vel tristique neque. Etiam urna augue, lacinia sed urna sed, fermentum lacinia odio. Morbi nec blandit ligula.<br><br>
+  </article>
+  <ul>
+    <li><a href="https://instagram.com/nucntosh">My Instagram</a></li>
+  </ul>
+  <table>
+    <tr>
+      <th>Favorite Movies</th>
+      <th>Favorite Books</th>
+      <th>Favorite Songs</th>
+    </tr>
+    <tr>
+      <td>Empire Strikes Back</td>
+      <td>Pale Blue Dot</td>
+      <td>Bloodhounds on My Trail</td>
+    </tr>
+    <tr>
+      <td>The Wrath of Khan</td>
+      <td>Starship Troopers</td>
+      <td>A Day in the Life</td>
+    </tr>
+  </table>
 </body>
+
+
 </html>
