--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 
 <body>
   <header>
-    Tosh Murchison
+    <h1>Tosh Murchison</h1>
   </header>
-  <img src="http://lorempixel.com/400/200/business" alt="Random placeholder image">
+  <img width="400px" src="https://scontent-dfw5-1.xx.fbcdn.net/v/t1.0-9/81311571_1463336227164536_8280687398975700992_o.jpg?_nc_cat=105&_nc_oc=AQkRKdlzKn590yao_Cz2YNNUV-vYv1ZgbvnRkiMxAMw0-CC5lDSzxpcyyAk-VAykWyA&_nc_ht=scontent-dfw5-1.xx&oh=e4e08cf51aee8eb6c669537129f1b16e&oe=5EFB9035" alt="Tosh's Profile Image">
   <article>
   <hr>
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ut lacinia ex. Etiam bibendum nec massa a sollicitudin. Aenean convallis dignissim ligula in efficitur. Phasellus ac quam quis ipsum porttitor blandit eget at nulla. Aliquam pharetra ornare nunc, id convallis massa egestas a. In volutpat finibus urna, et tristique tortor tincidunt ac. Donec mi lectus, consectetur non odio fringilla, sodales tristique lorem. Aliquam sed volutpat ex. Aliquam commodo luctus metus, vitae consectetur diam ullamcorper vel.<br><br>
